# python

./: .buildinfo  .gitignore  README.html  README.md  _config.yml  _toc.yml  basics.html  docker-compose.yml  errors  fastapi.html  fastapi.ipynb  genindex.html  intro.html  intro.md  objects.inv  packages.html  packages.ipynb  pandas.html  pandas.ipynb  pyproject.toml  search.html  searchindex.js  sklearn.html  torch.html  torch.ipynb
.doctrees/: README.doctree  environment.pickle  intro.doctree
_sources/: README.md  basics.ipynb  sklearn.md
basics/: cli_arguments.html  cli_arguments.ipynb  cli_arguments.md  data_classes.html  data_classes.ipynb  datatypes.html  datatypes.ipynb  files_folders.html  interpreter.html  intro.html  logging.html  packages.html  syntax.html  unittest.html  unittest.ipynb
core/: cli_arguments.html  constructs.html  constructs.ipynb  data_classes.html  datatypes.html  datatypes.ipynb  files_folders.html  files_folders.ipynb  imports.html  imports.ipynb  interpreter.html  interpreter.ipynb  intro.html  intro.ipynb  iterator.ipynb  packages.html  syntax.html  syntax.ipynb
dockerfiles/: airflow.cfg  airflow.dockerfile
ds_ml/: airflow.html  airflow.ipynb  databricks_sdk.html  databricks_sdk.ipynb  geopy.html  hugging_face.html  hugging_face.ipynb  intro.html  intro.ipynb  jupyter.html  langchain.html  langchain.ipynb  langgraph.html  langgraph.ipynb  mlflow.html  mlflow.ipynb  numpy.html  open_cv.html  open_cv.ipynb  optuna.html  optuna.ipynb  ranx.html  spark.html  spark.ipynb  surprise.html  transformers.html  transformers.ipynb  xgboost.html  xgboost.ipynb
fastapi/: cache.html  cors.html  documentation.html  documentation.ipynb  intro.html  intro.ipynb  logging.html  (+5 more)
(+1562 files in other folders)
