[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
version = "0.0.0"
dependencies = [
    "jupyter-book",
    "docker",
    "mypy",
    "pyright",
    "command_kernel @ https://github.com/fedorkobak/command_kernel/archive/refs/tags/0.0.1.tar.gz"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.shared-data]
"src/linters_kernel/data_kernelspec" = "share/jupyter/kernels/linters_kernel"
"src/http_kernel/data_kernelspec" = "share/jupyter/kernels/http_kernel"
